k8s/templates/ingress/http-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  tls:
    - secretName: tls-key-secret
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: yc-frontend
              servicePort: 80
