k8s/templates/ingress/rsync-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rsync-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: yc-frontend
              servicePort: 10873
